--- a/docker-scrapyd-py3/scrapyd.conf
+++ b/docker-scrapyd-py3/scrapyd.conf
@@ -1,19 +1,20 @@
 [scrapyd]
-eggs_dir    = /var/lib/scrapyd/eggs
-logs_dir    = /var/lib/scrapyd/logs
-items_dir   = /var/lib/scrapyd/items
-dbs_dir     = /var/lib/scrapyd/dbs
+eggs_dir    = /scrapyd/eggs
+logs_dir    = /scrapyd/logs
+items_dir   = /scrapyd/items
+dbs_dir     = /scrapyd/dbs
 jobs_to_keep = 5
 max_proc    = 0
 max_proc_per_cpu = 4
 finished_to_keep = 100
-poll_interval = 5
+poll_interval = 5.0
 bind_address = 0.0.0.0
 http_port   = 6800
 debug       = off
 runner      = scrapyd.runner
 application = scrapyd.app.application
 launcher    = scrapyd.launcher.Launcher
+webroot     = scrapyd.website.Root
 
 [services]
 schedule.json     = scrapyd.webservice.Schedule
